--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
       <section>
 
-        <h3 class="my-5 display-5 font-weight-bold text-center">Qual é o nosso propósito?</h3>
+        <h3 class="my-5 display-5 font-weight-bold text-center">Serviços</h3>
 
         <div class="row features-small mb-5 mt-3 wow fadeIn">
 
@@ -185,7 +185,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Free for personal and commercial use</h6>
+                <h6 class="feature-title">Sites Estáticos</h6>
                 <p class="grey-text">Our license is user-friendly. Feel free to use MDB for both private as well as
                   commercial projects.
                 </p>
@@ -198,7 +198,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">400+ UI elements</h6>
+                <h6 class="feature-title">Sites Dinâmicos (sistemas)</h6>
                 <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
                 </p>
                 <div style="height:15px"></div>
@@ -210,7 +210,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">600+ icons</h6>
+                <h6 class="feature-title">Infraestrutura de Site</h6>
                 <p class="grey-text">Hundreds of useful, scalable, vector icons at your disposal.</p>
                 <div style="height:15px"></div>
               </div>
@@ -221,7 +221,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Fully responsive</h6>
+                <h6 class="feature-title">E-commerce e Lojas Virtuais</h6>
                 <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop,
                   tablet or mobile phone. MDB
                   looks great on each screen.</p>
@@ -230,8 +230,8 @@
             </div>
           </div>
 
-          <div class="col-md-4 flex-center">
-            <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone"
+          <div class="col-md-4 flex-center my-auto">
+            <img src="img/common/fullstack-icon.png" style="width: 200px;" alt="Fullstack Solutions"
               class="z-depth-0 img-fluid">
           </div>
 
@@ -241,7 +241,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">70+ CSS animations</h6>
+                <h6 class="feature-title">Monitoramento</h6>
                 <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your
                   project and delight your visitors.
                 </p>
@@ -254,7 +254,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Plenty of useful templates</h6>
+                <h6 class="feature-title">Design</h6>
                 <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
                 <div style="height:15px"></div>
               </div>
@@ -265,7 +265,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Easy installation</h6>
+                <h6 class="feature-title">Marketing Digital</h6>
                 <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
                 </p>
                 <div style="height:15px"></div>
@@ -277,7 +277,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Easy to use and customize</h6>
+                <h6 class="feature-title">Suporte técnico</h6>
                 <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep
                   customization. You will
                   easily adjust each component to suit your needs.</p>
