--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <main>
     <div class="container">
-      <section class="my-5 py-5 animated fadeInDown">
+      <section class="my-5 py-5 wow fadeInLeft">
         <div class="row">
           <div class="col-md-6 mb-4 d-none d-md-block">
 
