--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <i class="fab fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2 pl-3">
-                <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
+                <h5 class="feature-title font-bold mb-1">Telefone</h5>
                 <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers;
                   all browsers love MDB.
                 </p>
