--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div id="sobre"></div>
   <main>
     <div class="container">
-      <section class="my-5 wow fadeInDown">
+      <section class="my-5 wow fadeIn">
         <div class="row">
           <div class="col-md-6 my-4 d-none d-md-block">
 
