Conf. serv/descri

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li class="nav-item my-auto mx-2">
               <a class="nav-link text-center" href="#sobre">Sobre</a>
             </li>
+            <li class="nav-item my-auto mx-2">
+                <a class="nav-link text-center" href="#conceito">Conceitos</a>
+              </li>
             <a class="navbar-brand mx-2 d-none d-lg-block" href="#inicio">
               <img height="50" src="/img/common/fullstack-icon-w.png" alt="Fullstack">
             </a>
@@ -113,19 +116,20 @@
               <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/ricky.jpg" width="150" alt="Avatar">
               <div class="media-body text-center text-md-left ml-md-3 ml-0">
                 <h5 class="mt-0 font-weight-bold blue-text">Henrique Bustillos</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
-                congue felis in faucibus.
+                <p class="text-justify">Está na área da programação a um certo tempo, no qual pretende seguir na área de T.I. No entanto, é uma pessoa
+                  perfeccionista, detalhista e gosta de fazer as coisas bem feitas. É o gerente da empresa e responsável pelo design dos serviços oferecidos.
+                </p>
 
               </div>
             </div>
 
             <div class="media d-block d-md-flex">
-              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/jade.jpg" width="150" alt="Avatar">
+              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/jade1.jpg" width="140" alt="Avatar">
               <div class="media-body text-center text-md-left ml-md-3 ml-0">
                 <h5 class="mt-0 font-weight-bold blue-text">Jade Luany</h5>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis odit minima eaque dignissimos recusandae officiis commodi
-                nulla est, tempore atque voluptas non quod maxime, iusto, debitis aliquid? Iure ipsum, itaque.
+                <p class="text-justify">Começou a programar em 2018, desenvolveu alguns projetos até a criação da empresa. Centrada, organizada e comunicativa, é responsável pela 
+                documentação da empresa, além escolhida para ser a Scrum-Master da Fullstack Solutions. 
+              </p>
               </div>
             </div>
 
@@ -133,7 +137,7 @@
         </div>
       </section>
 
-      
+      <div id="conceito"></div>
       <hr class="my-5">
 
       <section>
@@ -219,8 +223,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Sites Estáticos</h6>
-                <p class="grey-text">Our license is user-friendly. Feel free to use MDB for both private as well as
-                  commercial projects.
+                <p class="grey-text text-justify">Não possui ferramentas de gerenciamento, isto é, não permite mudanças ou reformulações significativas de 
+                conteúdo sem que haja alterações no seu código fonte. 
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -232,7 +236,7 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Sites Dinâmicos (sistemas)</h6>
-                <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
+                <p class="grey-text text-justify">Conteúdo introduzido/alterado/excluído automaticamente através de scripts no servidor, através de linguagens como PHP, Python, Ruby, Java, entre outros. Com sistema de gerenciamento de conteúdo.
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -244,7 +248,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Infraestrutura de Site</h6>
-                <p class="grey-text">Hundreds of useful, scalable, vector icons at your disposal.</p>
+                <p class="grey-text text-justify">Para evitar a lentidão ou a queda constante do site, fazendo com que o usuário tenha acessibilidade e rapidez ao 
+                utiliza-lo</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -255,9 +260,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">E-commerce e Lojas Virtuais</h6>
-                <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop,
-                  tablet or mobile phone. MDB
-                  looks great on each screen.</p>
+                <p class="grey-text text-justify">O E-commerce envolve, basicamente, começar um negócio para vender seus produtos a partir da internet. 
+                A loja virtual, por sua vez, é apenas o site onde o consumidor adquire os produtos que você vende.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -275,8 +279,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Monitoramento</h6>
-                <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your
-                  project and delight your visitors.
+                <p class="grey-text text-justify">Sistema de monitoramento de sites que verifica se o seu site web está no ar,
+                enviando e-mail para alertá-lo em caso de falha ou de retorno do serviço e gerando relatórios de desempenho.
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -288,7 +292,9 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Design</h6>
-                <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
+                <p class="grey-text text-justify">Se preocupar em fazer dele uma página memorável, que trará resultado algum para o seu negócio.
+
+                  </p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -299,7 +305,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Marketing Digital</h6>
-                <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
+                <p class="grey-text text-justify">São ações de comunicação que as empresas podem utilizar por meio da internet,
+                 da telefonia celular e outros meios digitais, para assim divulgar e comercializar seus produtos, .
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -311,9 +318,8 @@
               </div>
               <div class="col-10">
                 <h6 class="feature-title">Suporte técnico</h6>
-                <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep
-                  customization. You will
-                  easily adjust each component to suit your needs.</p>
+                <p class="grey-text text-justify">É um serviço que presta assistência intelectual,
+                tecnológica e material a um cliente ou grupo de clientes, com o fim de solucionar problemas técnicos. </p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -325,6 +331,7 @@
 
       <hr class="mb-5">
 
+      <div id="contato"></div>
       <section>
 
         <h2 class="my-5 h3 text-center">Contato</h2>
