--- a/index.html
+++ b/index.html
@@ -113,22 +113,20 @@
           <div class="col-lg-10 col-xl-8 mb-5 mx-auto">
 
             <div class="media d-block d-md-flex mb-4">
-              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/ricky.jpg" width="150" alt="Avatar">
+              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/ricky.png" width="150" alt="Avatar">
               <div class="media-body text-center text-md-left ml-md-3 ml-0">
                 <h5 class="mt-0 font-weight-bold blue-text">Henrique Bustillos</h5>
-                <p class="text-justify">Está na área da programação a um certo tempo, no qual pretende seguir na área de T.I. No entanto, é uma pessoa
-                  perfeccionista, detalhista e gosta de fazer as coisas bem feitas. É o gerente da empresa e responsável pelo design dos serviços oferecidos.
+                <p class="text-justify">Gerente da empresa, desenvolvedor Fullstack nas linguagens web como HTML, CSS, JavaScript, PHP, MySQL e responsável pelo web design dos serviços oferecidos. É perfeccionista, detalhista e gosta de fazer um trabalho bem feito.
                 </p>
 
               </div>
             </div>
 
             <div class="media d-block d-md-flex">
-              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/jade1.jpg" width="140" alt="Avatar">
+              <img class="d-flex rounded-circle avatar z-depth-1-half mb-3 mx-auto" src="img/common/jade.jpg" width="150" alt="Avatar">
               <div class="media-body text-center text-md-left ml-md-3 ml-0">
                 <h5 class="mt-0 font-weight-bold blue-text">Jade Luany</h5>
-                <p class="text-justify">Começou a programar em 2018, desenvolveu alguns projetos até a criação da empresa. Centrada, organizada e comunicativa, é responsável pela 
-                documentação da empresa, além escolhida para ser a Scrum-Master da Fullstack Solutions. 
+                <p class="text-justify">Começou a programar em 2018, desenvolveu alguns projetos até a criação da empresa. Centrada, organizada e comunicativa, é responsável pela documentação da empresa e foi escolhida para ser a Scrum-Master da Fullstack Solutions, líder da equipe de desenvolvimento. 
               </p>
               </div>
             </div>
